myservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: chatodo/myservice:1
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice
  type: NodePort
  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /myservice/ # le gateway va rediriger vers le service myservice
#        regex: '\/carservice\/*'
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host:  myservice.default.svc.cluster.local # DNS qui est démaré par défaut et il s'enregistre avec ce nom
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
